import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "url_loader.mojom",
  ]
}

executable("chromium_ll_examples") {
  sources = [
    "main.cc"
  ]

  deps = [
    "//base",
    "//net",
    "//mojo/public/cpp/bindings",
    "//mojo/core/embedder",
    ":mojom"
  ]
}
